# zisk

./: .gitmodules  Cargo.toml  flake.nix  gen.sh
cli/: Cargo.toml
cli/src/: lib.rs
cli/src/commands/: build.rs  execute.rs  prove.rs  server.rs  stats.rs  verify_constraints.rs
cli/src/toolchain/: build_toolchain.rs
common/src/: zisk_lib_init.rs
common/src/bus/: data_bus_accounts.rs  data_bus_mem.rs  mod.rs
common/src/component/: component_counter.rs
core/: Cargo.toml
core/src/: lib.rs  mem.rs  zisk_inst.rs  zisk_inst_builder.rs  zisk_rom.rs
data-bus/src/: data_bus.rs
distributed/crates/worker/: Cargo.toml
emulator/: Cargo.toml
emulator/src/: emu.rs  emu_context.rs  emulator.rs  emulator_errors.rs
executor/: Cargo.toml
executor/src/: executor.rs  sm_static_bundle.rs  static_data_bus.rs  static_data_bus_collect.rs
pil/: zisk.pil
pil/src/pil_helpers/: traces.rs
precompiles/arith_eq/src/: arith_eq_bus_device.rs
precompiles/arith_eq_384/src/: arith_eq_384_bus_device.rs
precompiles/common/src/: lib.rs
precompiles/keccakf/pil/: keccakf.pil
precompiles/keccakf/src/: keccakf_bus_device.rs  (+1 more)
rom-setup/src/: lib.rs  rom_full_setup.rs  rom_merkle.rs  utils.rs
server/: Cargo.toml
server/src/: handler_prove.rs  handler_shutdown.rs  handler_status.rs  handler_verify_constraints.rs  zisk_service.rs
state-machines/accounts/: Cargo.toml
state-machines/accounts/pil/: accounts.pil
state-machines/accounts/src/: init.rs  lib.rs  poseidon.rs  result.rs
state-machines/main/: Cargo.toml
state-machines/mem/: Cargo.toml
state-machines/rom/: Cargo.toml
tools/update-rust/: update-rust.sh
witness-computation/: Cargo.toml
witness-computation/src/: sm_static_bundle.rs  static_data_bus.rs  zisk_lib.rs
(+56 files in other folders)
