[package]
name = "zisk-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[lib]
name = "zisk_core"
path = "src/lib.rs"

[dependencies]
precompiles-helpers = { workspace = true }
lib-c = { workspace = true }
ziskos = { workspace = true }
riscv = { workspace = true }
zisk-pil = { workspace = true }

rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fields = { workspace = true }

indexmap = { version = "2.2.6", features = ["serde"] }
json = "0.12.4"
elf = "0.7.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha2 = { version = "0.10.9", features = ["compress"] }
generic-array = "0.14"

solana-sdk.workspace = true
sbpf-parser.workspace=true
svm-tracer.workspace=true
mollusk-svm.workspace=true
solana-program-runtime.workspace=true
solana-sbpf.workspace=true
solana-pubkey.workspace=true
blake3 = "1.8.2"
serde_with.workspace = true

[features]
default = []
# sp = []
