[package]
name = "sm-accounts"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
sbpf-parser.workspace=true
solana-sdk.workspace = true
solana-pubkey.workspace = true
zisk-core = { path = "../../core" }
zisk-common = { path = "../../common" }
solana-account.workspace = true
fields = { workspace=true }
zisk-pil = { path = "../../pil" }
proofman-common.workspace = true
sm-mem = { version = "0.10.0", path = "../mem" }
